--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,66 @@
+admin-captcha==1.0.0
+appdirs==1.4.3
 asgiref==3.3.1
+astroid==2.3.3
+captcha==0.3
+captcha-harvester==1.0.333
+captcha-manager==0.0.2.1
+captcha-simple==1.0
+certifi==2020.4.5.1
+chardet==3.0.4
+colorama==0.4.3
+construct==2.5.3
+cycler==0.10.0
+defusedxml==0.6.0
+distlib==0.3.0
 Django==3.1.6
+django-bootstrap==0.2.4
+django-captcha==1.0.0
+django-captcha-admin==0.2
+django-cors-middleware==1.5.0
+django-haystack==3.0b1
+django-oauth-toolkit==1.3.2
+django-openid-auth==0.15
+django-ranged-response==0.2.0
+django-recaptcha==1.3.0
+django-simple-captcha==0.5.12
+django-widget-tweaks==1.4.8
+filelock==3.0.12
+furl==2.1.0
+future==0.18.2
+gunicorn==20.0.4
+haystack==0.42
+idna==2.9
+install-requires==0.3.0
+isort==4.3.21
+jieba==0.42.1
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+matplotlib==3.3.4
+mccabe==0.6.1
+numpy==1.20.1
+oauth2-provider==0.0
+oauthlib==3.1.0
+orderedmultidict==1.0.1
+pefile==2019.4.18
+Pillow==7.1.2
+pylint==2.4.4
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-ptrace==0.9.5
+python3-openid==3.1.0
 pytz==2021.1
+requests==2.23.0
+scipy @ file:///C:/Users/ljh2000/Desktop/2020-2021-2/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%97%85%E6%AF%92%E5%8E%9F%E7%90%86/%E6%96%87%E6%A1%A3%E4%B8%80%EF%BC%9A%E6%81%B6%E6%84%8F%E4%BB%A3%E7%A0%81%E6%A8%A1%E5%9E%8B/MSIR/scipy-1.6.1-cp38-cp38-win_amd64.whl
+six==1.14.0
 sqlparse==0.4.1
+task-runner==0.0.1
+torch==1.7.1
+torchvision @ file:///C:/Users/ljh2000/Desktop/pysyft/torchvision-0.8.2%2Bcu101-cp38-cp38-win_amd64.whl
+two-captcha-sdk==0.0.2.1
+typing-extensions==3.7.4.3
+urllib3==1.25.9
+Werkzeug==1.0.1
+Whoosh==2.7.4
+wrapt==1.11.2
+xapian-haystack==2.1.1
